added valdiation split

--- a/src/preprocessing/process_cHL1.ipynb
+++ b/src/preprocessing/process_cHL1.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,19 +73,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = reorder_columns(df, 'cellLabel', 'identifier')\n",
     "df = reorder_columns(df, 'Annotation', 'cellLabel')\n",
-    "df.rename(columns={'Annotation': 'cell_type'}, inplace=True)\n",
-    "df.drop(columns=['centroidX', 'centroidY', 'cellLabel'], inplace=True)"
+    "df.rename(columns={'Annotation': 'cell_type', 'centroidX':'x', 'centroidY': 'y'}, inplace=True)\n",
+    "df.drop(columns=['cellLabel'], inplace=True)\n",
+    "df = reorder_columns(df, 'y', 'cellSize')\n",
+    "df = reorder_columns(df, 'x', 'cellSize')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -120,14 +122,14 @@
        "      <th>CD4</th>\n",
        "      <th>CD11c</th>\n",
        "      <th>...</th>\n",
-       "      <th>CD30</th>\n",
-       "      <th>TIM3</th>\n",
        "      <th>RORgT</th>\n",
        "      <th>TCRgd</th>\n",
        "      <th>CD86</th>\n",
        "      <th>CD25</th>\n",
        "      <th>Na-K ATPase</th>\n",
        "      <th>cellSize</th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
        "      <th>identifier</th>\n",
        "      <th>cell_type</th>\n",
        "    </tr>\n",
@@ -146,14 +148,14 @@
        "      <td>0.001707</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.001195</td>\n",
        "      <td>0.000785</td>\n",
        "      <td>0.000921</td>\n",
        "      <td>0.001140</td>\n",
        "      <td>0.001094</td>\n",
        "      <td>0.003093</td>\n",
        "      <td>249</td>\n",
+       "      <td>559</td>\n",
+       "      <td>1996</td>\n",
        "      <td>31</td>\n",
        "      <td>M2</td>\n",
        "    </tr>\n",
@@ -172,12 +174,12 @@
        "      <td>...</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
        "      <td>0.000307</td>\n",
        "      <td>0.000030</td>\n",
        "      <td>0.001797</td>\n",
        "      <td>22</td>\n",
+       "      <td>1406</td>\n",
+       "      <td>3</td>\n",
        "      <td>31</td>\n",
        "      <td>M2</td>\n",
        "    </tr>\n",
@@ -194,14 +196,14 @@
        "      <td>0.002056</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000010</td>\n",
        "      <td>0.000205</td>\n",
        "      <td>0.000214</td>\n",
        "      <td>0.000653</td>\n",
        "      <td>0.001518</td>\n",
        "      <td>0.005575</td>\n",
        "      <td>35</td>\n",
+       "      <td>1502</td>\n",
+       "      <td>4</td>\n",
        "      <td>31</td>\n",
        "      <td>M2</td>\n",
        "    </tr>\n",
@@ -219,13 +221,13 @@
        "      <td>0.000000</td>\n",
        "      <td>...</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.000262</td>\n",
-       "      <td>0.000000</td>\n",
        "      <td>0.000328</td>\n",
        "      <td>0.000456</td>\n",
        "      <td>0.000939</td>\n",
        "      <td>0.004156</td>\n",
        "      <td>29</td>\n",
+       "      <td>1838</td>\n",
+       "      <td>4</td>\n",
        "      <td>31</td>\n",
        "      <td>M2</td>\n",
        "    </tr>\n",
@@ -243,13 +245,13 @@
        "      <td>0.000000</td>\n",
        "      <td>...</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.000030</td>\n",
-       "      <td>0.000000</td>\n",
        "      <td>0.000702</td>\n",
        "      <td>0.000378</td>\n",
        "      <td>0.001069</td>\n",
        "      <td>0.008932</td>\n",
        "      <td>14</td>\n",
+       "      <td>2027</td>\n",
+       "      <td>3</td>\n",
        "      <td>31</td>\n",
        "      <td>M2</td>\n",
        "    </tr>\n",
@@ -290,14 +292,14 @@
        "      <td>0.006395</td>\n",
        "      <td>0.005166</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.000003</td>\n",
-       "      <td>0.000364</td>\n",
        "      <td>0.000058</td>\n",
        "      <td>0.000490</td>\n",
        "      <td>0.000726</td>\n",
        "      <td>0.000953</td>\n",
        "      <td>0.005393</td>\n",
        "      <td>145</td>\n",
+       "      <td>436</td>\n",
+       "      <td>2489</td>\n",
        "      <td>6</td>\n",
        "      <td>Neutrophil</td>\n",
        "    </tr>\n",
@@ -314,14 +316,14 @@
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
        "      <td>0.000242</td>\n",
        "      <td>0.000564</td>\n",
        "      <td>0.000394</td>\n",
        "      <td>0.000344</td>\n",
        "      <td>0.001827</td>\n",
        "      <td>36</td>\n",
+       "      <td>692</td>\n",
+       "      <td>2503</td>\n",
        "      <td>6</td>\n",
        "      <td>Neutrophil</td>\n",
        "    </tr>\n",
@@ -338,14 +340,14 @@
        "      <td>0.003382</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000012</td>\n",
        "      <td>0.000111</td>\n",
        "      <td>0.000868</td>\n",
        "      <td>0.000354</td>\n",
        "      <td>0.000809</td>\n",
        "      <td>0.004953</td>\n",
        "      <td>44</td>\n",
+       "      <td>470</td>\n",
+       "      <td>2519</td>\n",
        "      <td>6</td>\n",
        "      <td>Neutrophil</td>\n",
        "    </tr>\n",
@@ -363,13 +365,13 @@
        "      <td>0.000000</td>\n",
        "      <td>...</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
        "      <td>0.000150</td>\n",
        "      <td>0.000395</td>\n",
        "      <td>0.000022</td>\n",
        "      <td>0.001163</td>\n",
        "      <td>29</td>\n",
+       "      <td>684</td>\n",
+       "      <td>2520</td>\n",
        "      <td>6</td>\n",
        "      <td>Neutrophil</td>\n",
        "    </tr>\n",
@@ -386,20 +388,20 @@
        "      <td>0.003807</td>\n",
        "      <td>0.000296</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000691</td>\n",
        "      <td>0.000020</td>\n",
        "      <td>0.000567</td>\n",
        "      <td>0.000493</td>\n",
        "      <td>0.000554</td>\n",
        "      <td>0.003606</td>\n",
        "      <td>56</td>\n",
+       "      <td>545</td>\n",
+       "      <td>2556</td>\n",
        "      <td>6</td>\n",
        "      <td>Neutrophil</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1669853 rows × 44 columns</p>\n",
+       "<p>1669853 rows × 46 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -416,49 +418,49 @@
        "1669851  0.000000  0.000000  0.000000    0.080264  0.000978  0.000000   \n",
        "1669852  0.000000  0.000540  0.000000    0.196379  0.001064  0.000039   \n",
        "\n",
-       "         CD153 (CD30L)      Lag3       CD4     CD11c  ...      CD30      TIM3  \\\n",
-       "0             0.000074  0.000160  0.001707  0.000000  ...  0.000000  0.001195   \n",
+       "         CD153 (CD30L)      Lag3       CD4     CD11c  ...     RORgT     TCRgd  \\\n",
+       "0             0.000074  0.000160  0.001707  0.000000  ...  0.000785  0.000921   \n",
        "1             0.000000  0.000112  0.000000  0.000000  ...  0.000000  0.000000   \n",
-       "2             0.000000  0.000000  0.002056  0.000000  ...  0.000000  0.000010   \n",
-       "3             0.000000  0.000000  0.000156  0.000000  ...  0.000000  0.000262   \n",
-       "4             0.000000  0.000000  0.000000  0.000000  ...  0.000000  0.000030   \n",
+       "2             0.000000  0.000000  0.002056  0.000000  ...  0.000205  0.000214   \n",
+       "3             0.000000  0.000000  0.000156  0.000000  ...  0.000000  0.000328   \n",
+       "4             0.000000  0.000000  0.000000  0.000000  ...  0.000000  0.000702   \n",
        "...                ...       ...       ...       ...  ...       ...       ...   \n",
-       "1669848       0.002012  0.000046  0.006395  0.005166  ...  0.000003  0.000364   \n",
-       "1669849       0.006320  0.000045  0.000000  0.000000  ...  0.000000  0.000000   \n",
-       "1669850       0.002020  0.000016  0.003382  0.000000  ...  0.000000  0.000012   \n",
-       "1669851       0.001857  0.000000  0.000000  0.000000  ...  0.000000  0.000000   \n",
-       "1669852       0.001364  0.000000  0.003807  0.000296  ...  0.000000  0.000691   \n",
+       "1669848       0.002012  0.000046  0.006395  0.005166  ...  0.000058  0.000490   \n",
+       "1669849       0.006320  0.000045  0.000000  0.000000  ...  0.000242  0.000564   \n",
+       "1669850       0.002020  0.000016  0.003382  0.000000  ...  0.000111  0.000868   \n",
+       "1669851       0.001857  0.000000  0.000000  0.000000  ...  0.000000  0.000150   \n",
+       "1669852       0.001364  0.000000  0.003807  0.000296  ...  0.000020  0.000567   \n",
        "\n",
-       "            RORgT     TCRgd      CD86      CD25  Na-K ATPase  cellSize  \\\n",
-       "0        0.000785  0.000921  0.001140  0.001094     0.003093       249   \n",
-       "1        0.000000  0.000000  0.000307  0.000030     0.001797        22   \n",
-       "2        0.000205  0.000214  0.000653  0.001518     0.005575        35   \n",
-       "3        0.000000  0.000328  0.000456  0.000939     0.004156        29   \n",
-       "4        0.000000  0.000702  0.000378  0.001069     0.008932        14   \n",
-       "...           ...       ...       ...       ...          ...       ...   \n",
-       "1669848  0.000058  0.000490  0.000726  0.000953     0.005393       145   \n",
-       "1669849  0.000242  0.000564  0.000394  0.000344     0.001827        36   \n",
-       "1669850  0.000111  0.000868  0.000354  0.000809     0.004953        44   \n",
-       "1669851  0.000000  0.000150  0.000395  0.000022     0.001163        29   \n",
-       "1669852  0.000020  0.000567  0.000493  0.000554     0.003606        56   \n",
+       "             CD86      CD25  Na-K ATPase  cellSize     x     y  identifier  \\\n",
+       "0        0.001140  0.001094     0.003093       249   559  1996          31   \n",
+       "1        0.000307  0.000030     0.001797        22  1406     3          31   \n",
+       "2        0.000653  0.001518     0.005575        35  1502     4          31   \n",
+       "3        0.000456  0.000939     0.004156        29  1838     4          31   \n",
+       "4        0.000378  0.001069     0.008932        14  2027     3          31   \n",
+       "...           ...       ...          ...       ...   ...   ...         ...   \n",
+       "1669848  0.000726  0.000953     0.005393       145   436  2489           6   \n",
+       "1669849  0.000394  0.000344     0.001827        36   692  2503           6   \n",
+       "1669850  0.000354  0.000809     0.004953        44   470  2519           6   \n",
+       "1669851  0.000395  0.000022     0.001163        29   684  2520           6   \n",
+       "1669852  0.000493  0.000554     0.003606        56   545  2556           6   \n",
        "\n",
-       "         identifier   cell_type  \n",
-       "0                31          M2  \n",
-       "1                31          M2  \n",
-       "2                31          M2  \n",
-       "3                31          M2  \n",
-       "4                31          M2  \n",
-       "...             ...         ...  \n",
-       "1669848           6  Neutrophil  \n",
-       "1669849           6  Neutrophil  \n",
-       "1669850           6  Neutrophil  \n",
-       "1669851           6  Neutrophil  \n",
-       "1669852           6  Neutrophil  \n",
+       "          cell_type  \n",
+       "0                M2  \n",
+       "1                M2  \n",
+       "2                M2  \n",
+       "3                M2  \n",
+       "4                M2  \n",
+       "...             ...  \n",
+       "1669848  Neutrophil  \n",
+       "1669849  Neutrophil  \n",
+       "1669850  Neutrophil  \n",
+       "1669851  Neutrophil  \n",
+       "1669852  Neutrophil  \n",
        "\n",
-       "[1669853 rows x 44 columns]"
+       "[1669853 rows x 46 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
