--- a/src/preprocessing/process_feto_maternal.ipynb
+++ b/src/preprocessing/process_feto_maternal.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,47 +525,405 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "df.drop(columns=['Ki67_divided_by_H3', 'Ki67_binary', 'TIGIT_binary', 'TIM-3_binary', 'GrB_binary', 'iNOS_binary', 'Lck_binary', 'PD-1_binary', \n",
     "                 'HO-1_binary', 'Galectin-9_binary', 'PD-L1_binary', 'IDO-1_binary', 'overlap_arteries', 'overlap_vessels', 'overlap_decidua',\n",
-    "                 'overlap_cell_column', 'overlap_gland', 'FlowSom_cluster', 'centroid0', 'centroid1', 'label_nuclear', 'label_nuclear',\n",
+    "                 'overlap_cell_column', 'overlap_gland', 'FlowSom_cluster', 'label_nuclear', 'label_nuclear',\n",
     "                 'cell_ID_in_Point', 'microenvironment', 'microenvironment_figure'], inplace=True)\n",
     "df.rename(columns={'lineage': 'cell_type'}, inplace=True)\n",
     "df = reorder_columns(df, 'cell_type', 'distance_from_artery')\n",
     "df = reorder_columns(df, 'cell_size', 'area')\n",
     "df['nucleated'] = df['nucleated'].replace({'yes': 1, 'no': 0})\n",
-    "df['nucleated'] = df['nucleated'].astype(int)"
+    "df['nucleated'] = df['nucleated'].astype(int)\n",
+    "df.rename(columns={'centroid0': 'y', 'centroid1': 'x'}, inplace=True)\n",
+    "df = reorder_columns(df, 'y', 'x')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CD11c</th>\n",
+       "      <th>CD14</th>\n",
+       "      <th>CD16</th>\n",
+       "      <th>CD163</th>\n",
+       "      <th>CD20</th>\n",
+       "      <th>CD206</th>\n",
+       "      <th>CD3</th>\n",
+       "      <th>CD31</th>\n",
+       "      <th>CD4</th>\n",
+       "      <th>CD44</th>\n",
+       "      <th>...</th>\n",
+       "      <th>perimeter</th>\n",
+       "      <th>Point</th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>area_nuclear</th>\n",
+       "      <th>nucleated</th>\n",
+       "      <th>overlap_decidua_only</th>\n",
+       "      <th>point_mean_delta</th>\n",
+       "      <th>distance_from_artery</th>\n",
+       "      <th>cell_type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.858311</td>\n",
+       "      <td>0.769537</td>\n",
+       "      <td>0.826435</td>\n",
+       "      <td>0.305853</td>\n",
+       "      <td>0.854678</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.869078</td>\n",
+       "      <td>0.602367</td>\n",
+       "      <td>...</td>\n",
+       "      <td>113.154329</td>\n",
+       "      <td>10_31742_1_2</td>\n",
+       "      <td>35</td>\n",
+       "      <td>1146</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.645576</td>\n",
+       "      <td>426.656771</td>\n",
+       "      <td>Mac2a</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.608643</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.356172</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.613772</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.632391</td>\n",
+       "      <td>...</td>\n",
+       "      <td>81.633514</td>\n",
+       "      <td>10_31742_1_2</td>\n",
+       "      <td>629</td>\n",
+       "      <td>1245</td>\n",
+       "      <td>205</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.645576</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>other</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.821260</td>\n",
+       "      <td>0.619963</td>\n",
+       "      <td>0.814300</td>\n",
+       "      <td>0.482688</td>\n",
+       "      <td>0.728758</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.777645</td>\n",
+       "      <td>0.618453</td>\n",
+       "      <td>...</td>\n",
+       "      <td>78.183766</td>\n",
+       "      <td>10_31742_1_2</td>\n",
+       "      <td>1189</td>\n",
+       "      <td>760</td>\n",
+       "      <td>213</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.645576</td>\n",
+       "      <td>328.184399</td>\n",
+       "      <td>Mac2a</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.818859</td>\n",
+       "      <td>0.596728</td>\n",
+       "      <td>0.623279</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.507723</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.786343</td>\n",
+       "      <td>0.612739</td>\n",
+       "      <td>...</td>\n",
+       "      <td>96.769553</td>\n",
+       "      <td>10_31742_1_2</td>\n",
+       "      <td>1914</td>\n",
+       "      <td>1151</td>\n",
+       "      <td>269</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.645576</td>\n",
+       "      <td>286.043703</td>\n",
+       "      <td>Mac2a</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.122189</td>\n",
+       "      <td>...</td>\n",
+       "      <td>119.047727</td>\n",
+       "      <td>10_31742_1_2</td>\n",
+       "      <td>322</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.645576</td>\n",
+       "      <td>505.262308</td>\n",
+       "      <td>other</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>495344</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.409816</td>\n",
+       "      <td>...</td>\n",
+       "      <td>76.183766</td>\n",
+       "      <td>16_31766_3_2</td>\n",
+       "      <td>1846</td>\n",
+       "      <td>1735</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Fibroblasts</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>495345</th>\n",
+       "      <td>0.068865</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>45.384776</td>\n",
+       "      <td>16_31766_3_2</td>\n",
+       "      <td>1718</td>\n",
+       "      <td>796</td>\n",
+       "      <td>159</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Fibroblasts</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>495346</th>\n",
+       "      <td>0.725608</td>\n",
+       "      <td>0.631638</td>\n",
+       "      <td>0.537892</td>\n",
+       "      <td>0.686284</td>\n",
+       "      <td>0.277864</td>\n",
+       "      <td>0.354021</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.417691</td>\n",
+       "      <td>0.591745</td>\n",
+       "      <td>0.570298</td>\n",
+       "      <td>...</td>\n",
+       "      <td>155.982756</td>\n",
+       "      <td>16_31766_3_2</td>\n",
+       "      <td>1977</td>\n",
+       "      <td>472</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NK3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>495347</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.095473</td>\n",
+       "      <td>...</td>\n",
+       "      <td>141.053824</td>\n",
+       "      <td>16_31766_3_2</td>\n",
+       "      <td>431</td>\n",
+       "      <td>749</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Fibroblasts</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>495348</th>\n",
+       "      <td>0.326975</td>\n",
+       "      <td>0.305322</td>\n",
+       "      <td>0.107786</td>\n",
+       "      <td>0.338942</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.169412</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.147407</td>\n",
+       "      <td>0.334885</td>\n",
+       "      <td>...</td>\n",
+       "      <td>239.551299</td>\n",
+       "      <td>16_31766_3_2</td>\n",
+       "      <td>717</td>\n",
+       "      <td>707</td>\n",
+       "      <td>281</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>EVT1a</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>495349 rows × 53 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Index(['CD11c', 'CD14', 'CD16', 'CD163', 'CD20', 'CD206', 'CD3', 'CD31', 'CD4',\n",
-       "       'CD44', 'CD45', 'CD56', 'CD57', 'CD68', 'CD8', 'CD80', 'CK7', 'DC-SIGN',\n",
-       "       'Ecad', 'FoxP3', 'Galectin-9', 'GrB', 'H3', 'HLA-DR', 'HLA-G', 'HO-1',\n",
-       "       'IDO-1', 'Ki67_raw', 'Lck', 'PD-1', 'PD-L1', 'SMA', 'TIGIT', 'TIM-3',\n",
-       "       'Tryptase', 'VIM', 'background', 'iNOS', 'area', 'cell_size',\n",
-       "       'eccentricity', 'major_axis_length', 'minor_axis_length', 'perimeter',\n",
-       "       'Point', 'area_nuclear', 'nucleated', 'overlap_decidua_only',\n",
-       "       'point_mean_delta', 'distance_from_artery', 'cell_type'],\n",
-       "      dtype='object')"
+       "           CD11c      CD14      CD16     CD163      CD20     CD206       CD3  \\\n",
+       "0       0.000000  0.858311  0.769537  0.826435  0.305853  0.854678  0.000000   \n",
+       "1       0.000000  0.608643  0.000000  0.356172  0.000000  0.000000  0.613772   \n",
+       "2       0.000000  0.821260  0.619963  0.814300  0.482688  0.728758  0.000000   \n",
+       "3       0.000000  0.818859  0.596728  0.623279  0.000000  0.507723  0.000000   \n",
+       "4       0.000000  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000   \n",
+       "...          ...       ...       ...       ...       ...       ...       ...   \n",
+       "495344  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000   \n",
+       "495345  0.068865  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000   \n",
+       "495346  0.725608  0.631638  0.537892  0.686284  0.277864  0.354021  0.000000   \n",
+       "495347  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000   \n",
+       "495348  0.326975  0.305322  0.107786  0.338942  0.000000  0.169412  0.000000   \n",
+       "\n",
+       "            CD31       CD4      CD44  ...   perimeter         Point     x  \\\n",
+       "0       0.000000  0.869078  0.602367  ...  113.154329  10_31742_1_2    35   \n",
+       "1       0.000000  0.000000  0.632391  ...   81.633514  10_31742_1_2   629   \n",
+       "2       0.000000  0.777645  0.618453  ...   78.183766  10_31742_1_2  1189   \n",
+       "3       0.000000  0.786343  0.612739  ...   96.769553  10_31742_1_2  1914   \n",
+       "4       0.000000  0.000000  0.122189  ...  119.047727  10_31742_1_2   322   \n",
+       "...          ...       ...       ...  ...         ...           ...   ...   \n",
+       "495344  0.000000  0.000000  0.409816  ...   76.183766  16_31766_3_2  1846   \n",
+       "495345  0.000000  0.000000  0.000000  ...   45.384776  16_31766_3_2  1718   \n",
+       "495346  0.417691  0.591745  0.570298  ...  155.982756  16_31766_3_2  1977   \n",
+       "495347  0.000000  0.000000  0.095473  ...  141.053824  16_31766_3_2   431   \n",
+       "495348  0.000000  0.147407  0.334885  ...  239.551299  16_31766_3_2   717   \n",
+       "\n",
+       "           y  area_nuclear  nucleated  overlap_decidua_only  point_mean_delta  \\\n",
+       "0       1146             0          0                     1          1.645576   \n",
+       "1       1245           205          1                     0          1.645576   \n",
+       "2        760           213          1                     1          1.645576   \n",
+       "3       1151           269          1                     1          1.645576   \n",
+       "4         10             0          0                     1          1.645576   \n",
+       "...      ...           ...        ...                   ...               ...   \n",
+       "495344  1735             0          0                     1               NaN   \n",
+       "495345   796           159          1                     1               NaN   \n",
+       "495346   472             0          0                     1               NaN   \n",
+       "495347   749             0          0                     1               NaN   \n",
+       "495348   707           281          1                     1               NaN   \n",
+       "\n",
+       "        distance_from_artery    cell_type  \n",
+       "0                 426.656771        Mac2a  \n",
+       "1                        NaN        other  \n",
+       "2                 328.184399        Mac2a  \n",
+       "3                 286.043703        Mac2a  \n",
+       "4                 505.262308        other  \n",
+       "...                      ...          ...  \n",
+       "495344                   NaN  Fibroblasts  \n",
+       "495345                   NaN  Fibroblasts  \n",
+       "495346                   NaN          NK3  \n",
+       "495347                   NaN  Fibroblasts  \n",
+       "495348                   NaN        EVT1a  \n",
+       "\n",
+       "[495349 rows x 53 columns]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.columns"
+    "df"
    ]
   },
   {
@@ -641,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
