--- a/src/preprocessing/process_intestine_FODEX.ipynb
+++ b/src/preprocessing/process_intestine_FODEX.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -627,19 +627,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.drop(columns=['Unnamed: 0', 'x', 'y', 'array', 'Xcorr', 'Ycorr', 'Tissue_location', 'tissue', 'donor', \n",
+    "df.drop(columns=['Unnamed: 0', 'array', 'Xcorr', 'Ycorr', 'Tissue_location', 'tissue', 'donor', \n",
     "                 'region', 'Cell subtype', 'Cell Type', 'Neighborhood', 'Neigh_sub', 'Neighborhood_Ind',\n",
     "                 'NeighInd_sub', 'Community', 'Major Community', 'Tissue Segment', 'Tissue Unit'], inplace=True)\n",
     "df.rename(columns={'Cell Type em': 'cell_type'}, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = reorder_columns(df, 'unique_region', 'MUC6')"
    ]
   },
   {
@@ -655,8 +646,9 @@
        "       'CD44', 'CD16', 'BCL2', 'CD3', 'CD123', 'CD38', 'CD90', 'aSMA', 'CD21',\n",
        "       'NKG2D', 'CD66', 'CD57', 'CD206', 'CD68', 'CD34', 'aDef5', 'CD7',\n",
        "       'CD36', 'CD138', 'CD45RO', 'Cytokeratin', 'CD117', 'CD19', 'Podoplanin',\n",
-       "       'CD45', 'CD56', 'CD69', 'Ki67', 'CD49a', 'CD163', 'CD161', 'OLFM4',\n",
-       "       'FAP', 'CD25', 'CollIV', 'CK7', 'MUC6', 'unique_region', 'cell_type'],\n",
+       "       'CD45', 'CD56', 'CD69', 'Ki67', 'CD49a', 'CD163', 'CD161', 'x', 'y',\n",
+       "       'unique_region', 'OLFM4', 'FAP', 'CD25', 'CollIV', 'CK7', 'MUC6',\n",
+       "       'cell_type'],\n",
        "      dtype='object')"
       ]
      },
@@ -667,6 +659,399 @@
    ],
    "source": [
     "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = reorder_columns(df, 'unique_region', 'MUC6')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>MUC2</th>\n",
+       "      <th>SOX9</th>\n",
+       "      <th>MUC1</th>\n",
+       "      <th>CD31</th>\n",
+       "      <th>Synapto</th>\n",
+       "      <th>CD49f</th>\n",
+       "      <th>CD15</th>\n",
+       "      <th>CHGA</th>\n",
+       "      <th>CDX2</th>\n",
+       "      <th>ITLN1</th>\n",
+       "      <th>...</th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>OLFM4</th>\n",
+       "      <th>FAP</th>\n",
+       "      <th>CD25</th>\n",
+       "      <th>CollIV</th>\n",
+       "      <th>CK7</th>\n",
+       "      <th>MUC6</th>\n",
+       "      <th>unique_region</th>\n",
+       "      <th>cell_type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-0.303994</td>\n",
+       "      <td>-0.163727</td>\n",
+       "      <td>-0.587608</td>\n",
+       "      <td>-0.212903</td>\n",
+       "      <td>0.164173</td>\n",
+       "      <td>-0.664863</td>\n",
+       "      <td>0.049305</td>\n",
+       "      <td>0.003616</td>\n",
+       "      <td>-0.377532</td>\n",
+       "      <td>-0.450794</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3984.0</td>\n",
+       "      <td>3387.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-0.168582</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>B004_Ascending</td>\n",
+       "      <td>NK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-0.301927</td>\n",
+       "      <td>-0.491706</td>\n",
+       "      <td>-0.500804</td>\n",
+       "      <td>-0.243205</td>\n",
+       "      <td>-0.142568</td>\n",
+       "      <td>-0.664861</td>\n",
+       "      <td>-0.182627</td>\n",
+       "      <td>-0.117573</td>\n",
+       "      <td>-0.182754</td>\n",
+       "      <td>-0.236199</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5188.0</td>\n",
+       "      <td>4116.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-0.150520</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>B004_Ascending</td>\n",
+       "      <td>NK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-0.302206</td>\n",
+       "      <td>-0.547234</td>\n",
+       "      <td>-0.510705</td>\n",
+       "      <td>-0.235309</td>\n",
+       "      <td>-0.217185</td>\n",
+       "      <td>-0.622758</td>\n",
+       "      <td>-0.296486</td>\n",
+       "      <td>-0.091504</td>\n",
+       "      <td>-0.268055</td>\n",
+       "      <td>-0.355383</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6070.0</td>\n",
+       "      <td>3146.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-0.156116</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>B004_Ascending</td>\n",
+       "      <td>NK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-0.304219</td>\n",
+       "      <td>-0.613068</td>\n",
+       "      <td>-0.584499</td>\n",
+       "      <td>-0.243757</td>\n",
+       "      <td>-0.266696</td>\n",
+       "      <td>-0.658449</td>\n",
+       "      <td>-0.299027</td>\n",
+       "      <td>-0.121460</td>\n",
+       "      <td>-0.345381</td>\n",
+       "      <td>-0.450792</td>\n",
+       "      <td>...</td>\n",
+       "      <td>7587.0</td>\n",
+       "      <td>2361.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-0.136229</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>B004_Ascending</td>\n",
+       "      <td>NK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-0.294644</td>\n",
+       "      <td>-0.615593</td>\n",
+       "      <td>-0.570580</td>\n",
+       "      <td>-0.247548</td>\n",
+       "      <td>-0.042246</td>\n",
+       "      <td>-0.642230</td>\n",
+       "      <td>-0.299031</td>\n",
+       "      <td>-0.121458</td>\n",
+       "      <td>-0.377533</td>\n",
+       "      <td>-0.450797</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6792.0</td>\n",
+       "      <td>3891.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-0.159834</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>B004_Ascending</td>\n",
+       "      <td>NK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2603212</th>\n",
+       "      <td>0.351916</td>\n",
+       "      <td>0.693827</td>\n",
+       "      <td>-0.081489</td>\n",
+       "      <td>-0.240643</td>\n",
+       "      <td>0.008875</td>\n",
+       "      <td>0.143445</td>\n",
+       "      <td>0.373710</td>\n",
+       "      <td>-0.097896</td>\n",
+       "      <td>0.869830</td>\n",
+       "      <td>0.579653</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1693.0</td>\n",
+       "      <td>2079.0</td>\n",
+       "      <td>-0.100153</td>\n",
+       "      <td>0.014524</td>\n",
+       "      <td>0.077042</td>\n",
+       "      <td>-0.582639</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>B008_Trans</td>\n",
+       "      <td>CD66+ Enterocyte</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2603213</th>\n",
+       "      <td>0.233642</td>\n",
+       "      <td>0.171892</td>\n",
+       "      <td>0.141842</td>\n",
+       "      <td>-0.236145</td>\n",
+       "      <td>-0.097772</td>\n",
+       "      <td>-0.099283</td>\n",
+       "      <td>0.626185</td>\n",
+       "      <td>-0.105545</td>\n",
+       "      <td>0.092076</td>\n",
+       "      <td>0.682969</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1685.0</td>\n",
+       "      <td>2127.0</td>\n",
+       "      <td>-0.099490</td>\n",
+       "      <td>-0.066511</td>\n",
+       "      <td>-0.014087</td>\n",
+       "      <td>-0.607179</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>B008_Trans</td>\n",
+       "      <td>CD66+ Enterocyte</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2603214</th>\n",
+       "      <td>-0.212237</td>\n",
+       "      <td>-0.280904</td>\n",
+       "      <td>-0.197833</td>\n",
+       "      <td>-0.245638</td>\n",
+       "      <td>-0.152563</td>\n",
+       "      <td>-0.125035</td>\n",
+       "      <td>0.430416</td>\n",
+       "      <td>-0.105787</td>\n",
+       "      <td>-0.038327</td>\n",
+       "      <td>-0.173319</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1764.0</td>\n",
+       "      <td>2608.0</td>\n",
+       "      <td>-0.113319</td>\n",
+       "      <td>-0.156416</td>\n",
+       "      <td>-0.085273</td>\n",
+       "      <td>-0.697211</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>B008_Trans</td>\n",
+       "      <td>CD66+ Enterocyte</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2603215</th>\n",
+       "      <td>-0.328666</td>\n",
+       "      <td>0.607609</td>\n",
+       "      <td>-0.180362</td>\n",
+       "      <td>-0.247351</td>\n",
+       "      <td>-0.143742</td>\n",
+       "      <td>-0.169576</td>\n",
+       "      <td>1.095596</td>\n",
+       "      <td>-0.113879</td>\n",
+       "      <td>0.370160</td>\n",
+       "      <td>-0.133272</td>\n",
+       "      <td>...</td>\n",
+       "      <td>417.0</td>\n",
+       "      <td>5095.0</td>\n",
+       "      <td>-0.123759</td>\n",
+       "      <td>-0.110227</td>\n",
+       "      <td>-0.067961</td>\n",
+       "      <td>-0.715124</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>B008_Trans</td>\n",
+       "      <td>CD66+ Enterocyte</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2603216</th>\n",
+       "      <td>0.015179</td>\n",
+       "      <td>1.656635</td>\n",
+       "      <td>-0.250193</td>\n",
+       "      <td>-0.243560</td>\n",
+       "      <td>-0.084982</td>\n",
+       "      <td>0.061781</td>\n",
+       "      <td>1.300252</td>\n",
+       "      <td>-0.108526</td>\n",
+       "      <td>1.245830</td>\n",
+       "      <td>-0.063456</td>\n",
+       "      <td>...</td>\n",
+       "      <td>651.0</td>\n",
+       "      <td>5855.0</td>\n",
+       "      <td>-0.120998</td>\n",
+       "      <td>0.004133</td>\n",
+       "      <td>0.012770</td>\n",
+       "      <td>-0.612764</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>B008_Trans</td>\n",
+       "      <td>CD66+ Enterocyte</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2603217 rows × 57 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             MUC2      SOX9      MUC1      CD31   Synapto     CD49f      CD15  \\\n",
+       "0       -0.303994 -0.163727 -0.587608 -0.212903  0.164173 -0.664863  0.049305   \n",
+       "1       -0.301927 -0.491706 -0.500804 -0.243205 -0.142568 -0.664861 -0.182627   \n",
+       "2       -0.302206 -0.547234 -0.510705 -0.235309 -0.217185 -0.622758 -0.296486   \n",
+       "3       -0.304219 -0.613068 -0.584499 -0.243757 -0.266696 -0.658449 -0.299027   \n",
+       "4       -0.294644 -0.615593 -0.570580 -0.247548 -0.042246 -0.642230 -0.299031   \n",
+       "...           ...       ...       ...       ...       ...       ...       ...   \n",
+       "2603212  0.351916  0.693827 -0.081489 -0.240643  0.008875  0.143445  0.373710   \n",
+       "2603213  0.233642  0.171892  0.141842 -0.236145 -0.097772 -0.099283  0.626185   \n",
+       "2603214 -0.212237 -0.280904 -0.197833 -0.245638 -0.152563 -0.125035  0.430416   \n",
+       "2603215 -0.328666  0.607609 -0.180362 -0.247351 -0.143742 -0.169576  1.095596   \n",
+       "2603216  0.015179  1.656635 -0.250193 -0.243560 -0.084982  0.061781  1.300252   \n",
+       "\n",
+       "             CHGA      CDX2     ITLN1  ...       x       y     OLFM4  \\\n",
+       "0        0.003616 -0.377532 -0.450794  ...  3984.0  3387.0       NaN   \n",
+       "1       -0.117573 -0.182754 -0.236199  ...  5188.0  4116.0       NaN   \n",
+       "2       -0.091504 -0.268055 -0.355383  ...  6070.0  3146.0       NaN   \n",
+       "3       -0.121460 -0.345381 -0.450792  ...  7587.0  2361.0       NaN   \n",
+       "4       -0.121458 -0.377533 -0.450797  ...  6792.0  3891.0       NaN   \n",
+       "...           ...       ...       ...  ...     ...     ...       ...   \n",
+       "2603212 -0.097896  0.869830  0.579653  ...  1693.0  2079.0 -0.100153   \n",
+       "2603213 -0.105545  0.092076  0.682969  ...  1685.0  2127.0 -0.099490   \n",
+       "2603214 -0.105787 -0.038327 -0.173319  ...  1764.0  2608.0 -0.113319   \n",
+       "2603215 -0.113879  0.370160 -0.133272  ...   417.0  5095.0 -0.123759   \n",
+       "2603216 -0.108526  1.245830 -0.063456  ...   651.0  5855.0 -0.120998   \n",
+       "\n",
+       "              FAP      CD25    CollIV       CK7  MUC6   unique_region  \\\n",
+       "0             NaN       NaN       NaN -0.168582   NaN  B004_Ascending   \n",
+       "1             NaN       NaN       NaN -0.150520   NaN  B004_Ascending   \n",
+       "2             NaN       NaN       NaN -0.156116   NaN  B004_Ascending   \n",
+       "3             NaN       NaN       NaN -0.136229   NaN  B004_Ascending   \n",
+       "4             NaN       NaN       NaN -0.159834   NaN  B004_Ascending   \n",
+       "...           ...       ...       ...       ...   ...             ...   \n",
+       "2603212  0.014524  0.077042 -0.582639       NaN   NaN      B008_Trans   \n",
+       "2603213 -0.066511 -0.014087 -0.607179       NaN   NaN      B008_Trans   \n",
+       "2603214 -0.156416 -0.085273 -0.697211       NaN   NaN      B008_Trans   \n",
+       "2603215 -0.110227 -0.067961 -0.715124       NaN   NaN      B008_Trans   \n",
+       "2603216  0.004133  0.012770 -0.612764       NaN   NaN      B008_Trans   \n",
+       "\n",
+       "                cell_type  \n",
+       "0                      NK  \n",
+       "1                      NK  \n",
+       "2                      NK  \n",
+       "3                      NK  \n",
+       "4                      NK  \n",
+       "...                   ...  \n",
+       "2603212  CD66+ Enterocyte  \n",
+       "2603213  CD66+ Enterocyte  \n",
+       "2603214  CD66+ Enterocyte  \n",
+       "2603215  CD66+ Enterocyte  \n",
+       "2603216  CD66+ Enterocyte  \n",
+       "\n",
+       "[2603217 rows x 57 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
    ]
   },
   {
@@ -747,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
