--- a/src/preprocessing/process_tonsil_CODEX2.ipynb
+++ b/src/preprocessing/process_tonsil_CODEX2.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,19 +73,292 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['tonsil9338', 'tonsil6677', 'tonsil8953', 'LN', 'spleen'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df.drop(columns=['ProfileID', 'ClusterID', ':cell_id.cell_id', ':tile_nr.tile_nr', ':X.X', ':Y.Y', ':Z.Z', 'x', 'y', \n",
-    "                 'max_x', 'max_y', 'sample', 'x_in_file', 'y_in_file', 'follicle_id', 'Cluster Number', 'Cluster class'], inplace=True)\n",
-    "df.rename(columns={'Cluster name': 'cell_type'}, inplace=True)\n",
-    "df = reorder_columns(df, ':size.size', ':Cyc_1_ch_1.HOECHST1')"
+    "df['sample'].unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>max_x</th>\n",
+       "      <th>max_y</th>\n",
+       "      <th>file_key</th>\n",
+       "      <th>x_in_file</th>\n",
+       "      <th>y_in_file</th>\n",
+       "      <th>follicle_id</th>\n",
+       "      <th>Cluster Number</th>\n",
+       "      <th>Cluster class</th>\n",
+       "      <th>Cluster name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.000473</td>\n",
+       "      <td>0.083803</td>\n",
+       "      <td>14784</td>\n",
+       "      <td>19152</td>\n",
+       "      <td>tonsil9338</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>1605.0</td>\n",
+       "      <td>NO_LABEL_ASSIGNED</td>\n",
+       "      <td>1</td>\n",
+       "      <td>B cells</td>\n",
+       "      <td>B cells - (CD19/CD22/CD40)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.005208</td>\n",
+       "      <td>0.086623</td>\n",
+       "      <td>14784</td>\n",
+       "      <td>19152</td>\n",
+       "      <td>tonsil9338</td>\n",
+       "      <td>77.0</td>\n",
+       "      <td>1659.0</td>\n",
+       "      <td>NO_LABEL_ASSIGNED</td>\n",
+       "      <td>1</td>\n",
+       "      <td>B cells</td>\n",
+       "      <td>B cells - (CD19/CD22/CD40)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.000812</td>\n",
+       "      <td>0.104010</td>\n",
+       "      <td>14784</td>\n",
+       "      <td>19152</td>\n",
+       "      <td>tonsil9338</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>1992.0</td>\n",
+       "      <td>NO_LABEL_ASSIGNED</td>\n",
+       "      <td>1</td>\n",
+       "      <td>B cells</td>\n",
+       "      <td>B cells - (CD19/CD22/CD40)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.005817</td>\n",
+       "      <td>0.089129</td>\n",
+       "      <td>14784</td>\n",
+       "      <td>19152</td>\n",
+       "      <td>tonsil9338</td>\n",
+       "      <td>86.0</td>\n",
+       "      <td>1707.0</td>\n",
+       "      <td>NO_LABEL_ASSIGNED</td>\n",
+       "      <td>1</td>\n",
+       "      <td>B cells</td>\n",
+       "      <td>B cells - (CD19/CD22/CD40)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.008387</td>\n",
+       "      <td>0.087510</td>\n",
+       "      <td>14784</td>\n",
+       "      <td>19152</td>\n",
+       "      <td>tonsil9338</td>\n",
+       "      <td>124.0</td>\n",
+       "      <td>1676.0</td>\n",
+       "      <td>NO_LABEL_ASSIGNED</td>\n",
+       "      <td>1</td>\n",
+       "      <td>B cells</td>\n",
+       "      <td>B cells - (CD19/CD22/CD40)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2330398</th>\n",
+       "      <td>0.874504</td>\n",
+       "      <td>0.232876</td>\n",
+       "      <td>20160</td>\n",
+       "      <td>23184</td>\n",
+       "      <td>spleen</td>\n",
+       "      <td>17630.0</td>\n",
+       "      <td>5399.0</td>\n",
+       "      <td>NO_LABEL_ASSIGNED</td>\n",
+       "      <td>31</td>\n",
+       "      <td>unique</td>\n",
+       "      <td>Vimentin positive cells (CD45-)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2330399</th>\n",
+       "      <td>0.917659</td>\n",
+       "      <td>0.632074</td>\n",
+       "      <td>20160</td>\n",
+       "      <td>23184</td>\n",
+       "      <td>spleen</td>\n",
+       "      <td>18500.0</td>\n",
+       "      <td>14654.0</td>\n",
+       "      <td>NO_LABEL_ASSIGNED</td>\n",
+       "      <td>31</td>\n",
+       "      <td>unique</td>\n",
+       "      <td>Vimentin positive cells (CD45-)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2330400</th>\n",
+       "      <td>0.938442</td>\n",
+       "      <td>0.108696</td>\n",
+       "      <td>20160</td>\n",
+       "      <td>23184</td>\n",
+       "      <td>spleen</td>\n",
+       "      <td>18919.0</td>\n",
+       "      <td>2520.0</td>\n",
+       "      <td>NO_LABEL_ASSIGNED</td>\n",
+       "      <td>31</td>\n",
+       "      <td>unique</td>\n",
+       "      <td>Vimentin positive cells (CD45-)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2330401</th>\n",
+       "      <td>0.935714</td>\n",
+       "      <td>0.569876</td>\n",
+       "      <td>20160</td>\n",
+       "      <td>23184</td>\n",
+       "      <td>spleen</td>\n",
+       "      <td>18864.0</td>\n",
+       "      <td>13212.0</td>\n",
+       "      <td>NO_LABEL_ASSIGNED</td>\n",
+       "      <td>31</td>\n",
+       "      <td>unique</td>\n",
+       "      <td>Vimentin positive cells (CD45-)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2330402</th>\n",
+       "      <td>0.939087</td>\n",
+       "      <td>0.575138</td>\n",
+       "      <td>20160</td>\n",
+       "      <td>23184</td>\n",
+       "      <td>spleen</td>\n",
+       "      <td>18932.0</td>\n",
+       "      <td>13334.0</td>\n",
+       "      <td>NO_LABEL_ASSIGNED</td>\n",
+       "      <td>31</td>\n",
+       "      <td>unique</td>\n",
+       "      <td>Vimentin positive cells (CD45-)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2330403 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                x         y  max_x  max_y    file_key  x_in_file  y_in_file  \\\n",
+       "0        0.000473  0.083803  14784  19152  tonsil9338        7.0     1605.0   \n",
+       "1        0.005208  0.086623  14784  19152  tonsil9338       77.0     1659.0   \n",
+       "2        0.000812  0.104010  14784  19152  tonsil9338       12.0     1992.0   \n",
+       "3        0.005817  0.089129  14784  19152  tonsil9338       86.0     1707.0   \n",
+       "4        0.008387  0.087510  14784  19152  tonsil9338      124.0     1676.0   \n",
+       "...           ...       ...    ...    ...         ...        ...        ...   \n",
+       "2330398  0.874504  0.232876  20160  23184      spleen    17630.0     5399.0   \n",
+       "2330399  0.917659  0.632074  20160  23184      spleen    18500.0    14654.0   \n",
+       "2330400  0.938442  0.108696  20160  23184      spleen    18919.0     2520.0   \n",
+       "2330401  0.935714  0.569876  20160  23184      spleen    18864.0    13212.0   \n",
+       "2330402  0.939087  0.575138  20160  23184      spleen    18932.0    13334.0   \n",
+       "\n",
+       "               follicle_id  Cluster Number Cluster class  \\\n",
+       "0        NO_LABEL_ASSIGNED               1       B cells   \n",
+       "1        NO_LABEL_ASSIGNED               1       B cells   \n",
+       "2        NO_LABEL_ASSIGNED               1       B cells   \n",
+       "3        NO_LABEL_ASSIGNED               1       B cells   \n",
+       "4        NO_LABEL_ASSIGNED               1       B cells   \n",
+       "...                    ...             ...           ...   \n",
+       "2330398  NO_LABEL_ASSIGNED              31        unique   \n",
+       "2330399  NO_LABEL_ASSIGNED              31        unique   \n",
+       "2330400  NO_LABEL_ASSIGNED              31        unique   \n",
+       "2330401  NO_LABEL_ASSIGNED              31        unique   \n",
+       "2330402  NO_LABEL_ASSIGNED              31        unique   \n",
+       "\n",
+       "                            Cluster name  \n",
+       "0             B cells - (CD19/CD22/CD40)  \n",
+       "1             B cells - (CD19/CD22/CD40)  \n",
+       "2             B cells - (CD19/CD22/CD40)  \n",
+       "3             B cells - (CD19/CD22/CD40)  \n",
+       "4             B cells - (CD19/CD22/CD40)  \n",
+       "...                                  ...  \n",
+       "2330398  Vimentin positive cells (CD45-)  \n",
+       "2330399  Vimentin positive cells (CD45-)  \n",
+       "2330400  Vimentin positive cells (CD45-)  \n",
+       "2330401  Vimentin positive cells (CD45-)  \n",
+       "2330402  Vimentin positive cells (CD45-)  \n",
+       "\n",
+       "[2330403 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[:,-11:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.drop(columns=['ProfileID', 'ClusterID', ':cell_id.cell_id', ':tile_nr.tile_nr', ':X.X', ':Y.Y', ':Z.Z', 'x', 'y', \n",
+    "                 'max_x', 'max_y', 'sample', 'follicle_id', 'Cluster Number', 'Cluster class'], inplace=True)\n",
+    "df.rename(columns={'Cluster name': 'cell_type'}, inplace=True)\n",
+    "df = reorder_columns(df, ':size.size', ':Cyc_1_ch_1.HOECHST1')\n",
+    "df.rename(columns={'x_in_file': 'x', 'y_in_file': 'y'}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -106,11 +379,11 @@
        "       'podoplanin', 'CD45RA', 'CD34', 'CD54', 'CD9', 'IgM', 'CD117', 'CD56',\n",
        "       'CD279', 'CD45', 'CD49f', 'CD5', 'CD16', 'CD63', 'CD11b', 'CD1c',\n",
        "       'CD40', 'CD27', 'CD104', 'CD273', 'HOECHST1', ':size.size', 'file_key',\n",
-       "       'cell_type'],\n",
+       "       'x', 'y', 'cell_type'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
