--- a/src/preprocessing/process_MRL_CODEX.ipynb
+++ b/src/preprocessing/process_MRL_CODEX.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,18 +101,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.drop(columns=['X.X', 'Y.Y', 'Z.Z', 'blank_Cy3_cyc15', 'blank_Cy5_cyc15', 'niche cluster ID', 'sample_Xtile_Ytile'], inplace=True)\n",
+    "df.drop(columns=['Z.Z', 'blank_Cy3_cyc15', 'blank_Cy5_cyc15', 'niche cluster ID', 'sample_Xtile_Ytile'], inplace=True)\n",
     "df.rename(columns={'Imaging phenotype cluster ID': 'cell_type'}, inplace=True)\n",
-    "df = reorder_columns(df, 'cell_type', 'MHCII')"
+    "df = reorder_columns(df, 'cell_type', 'MHCII')\n",
+    "df = reorder_columns(df, 'Y.Y', 'MHCII')\n",
+    "df = reorder_columns(df, 'X.X', 'MHCII')\n",
+    "df.rename(columns={'X.X': 'x', 'Y.Y': 'y'}, inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -147,8 +150,6 @@
        "      <th>CD1632</th>\n",
        "      <th>CD8a</th>\n",
        "      <th>...</th>\n",
-       "      <th>CD4</th>\n",
-       "      <th>IgM</th>\n",
        "      <th>B220</th>\n",
        "      <th>ERTR7</th>\n",
        "      <th>CD35</th>\n",
@@ -156,6 +157,8 @@
        "      <th>CD44</th>\n",
        "      <th>NKp46</th>\n",
        "      <th>MHCII</th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
        "      <th>cell_type</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -173,8 +176,6 @@
        "      <td>385.935242</td>\n",
        "      <td>242.400131</td>\n",
        "      <td>...</td>\n",
-       "      <td>384.983276</td>\n",
-       "      <td>262.247803</td>\n",
        "      <td>457.675629</td>\n",
        "      <td>840.192688</td>\n",
        "      <td>120.959267</td>\n",
@@ -182,6 +183,8 @@
        "      <td>422.408691</td>\n",
        "      <td>515.130066</td>\n",
        "      <td>6712.812988</td>\n",
+       "      <td>10</td>\n",
+       "      <td>70</td>\n",
        "      <td>CD11c(+) B cells</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -197,8 +200,6 @@
        "      <td>-469.634583</td>\n",
        "      <td>482.660309</td>\n",
        "      <td>...</td>\n",
-       "      <td>247.624054</td>\n",
-       "      <td>-2.559227</td>\n",
        "      <td>1217.684692</td>\n",
        "      <td>682.790100</td>\n",
        "      <td>53.276588</td>\n",
@@ -206,6 +207,8 @@
        "      <td>448.701660</td>\n",
        "      <td>171.880310</td>\n",
        "      <td>2024.678711</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>294</td>\n",
        "      <td>CD11c(+) B cells</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -221,8 +224,6 @@
        "      <td>3744.718262</td>\n",
        "      <td>1287.204956</td>\n",
        "      <td>...</td>\n",
-       "      <td>2539.244141</td>\n",
-       "      <td>1074.491821</td>\n",
        "      <td>666.266418</td>\n",
        "      <td>753.930969</td>\n",
        "      <td>601.395996</td>\n",
@@ -230,6 +231,8 @@
        "      <td>2229.804443</td>\n",
        "      <td>512.220764</td>\n",
        "      <td>8647.193359</td>\n",
+       "      <td>1003</td>\n",
+       "      <td>107</td>\n",
        "      <td>CD11c(+) B cells</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -245,8 +248,6 @@
        "      <td>865.842590</td>\n",
        "      <td>554.589905</td>\n",
        "      <td>...</td>\n",
-       "      <td>1587.342529</td>\n",
-       "      <td>223.759796</td>\n",
        "      <td>2261.370361</td>\n",
        "      <td>249.342300</td>\n",
        "      <td>244.572174</td>\n",
@@ -254,6 +255,8 @@
        "      <td>665.720459</td>\n",
        "      <td>351.108246</td>\n",
        "      <td>4838.463379</td>\n",
+       "      <td>1003</td>\n",
+       "      <td>113</td>\n",
        "      <td>CD11c(+) B cells</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -269,8 +272,6 @@
        "      <td>1361.536011</td>\n",
        "      <td>258.848846</td>\n",
        "      <td>...</td>\n",
-       "      <td>215.759155</td>\n",
-       "      <td>227.193817</td>\n",
        "      <td>1058.446533</td>\n",
        "      <td>-267.946808</td>\n",
        "      <td>211.492844</td>\n",
@@ -278,6 +279,8 @@
        "      <td>2065.742676</td>\n",
        "      <td>259.003235</td>\n",
        "      <td>5092.891602</td>\n",
+       "      <td>1003</td>\n",
+       "      <td>148</td>\n",
        "      <td>CD11c(+) B cells</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -317,8 +320,6 @@
        "      <td>-136.550278</td>\n",
        "      <td>-667.158691</td>\n",
        "      <td>...</td>\n",
-       "      <td>2984.932373</td>\n",
-       "      <td>66.964172</td>\n",
        "      <td>-358.940735</td>\n",
        "      <td>172.902756</td>\n",
        "      <td>194.764572</td>\n",
@@ -326,6 +327,8 @@
        "      <td>-164.587204</td>\n",
        "      <td>-9.616314</td>\n",
        "      <td>958.904358</td>\n",
+       "      <td>955</td>\n",
+       "      <td>482</td>\n",
        "      <td>CD4(+)MHCII(+)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -341,8 +344,6 @@
        "      <td>-917.420166</td>\n",
        "      <td>-667.360107</td>\n",
        "      <td>...</td>\n",
-       "      <td>15249.159180</td>\n",
-       "      <td>2446.896973</td>\n",
        "      <td>3346.783691</td>\n",
        "      <td>2857.673828</td>\n",
        "      <td>869.343933</td>\n",
@@ -350,6 +351,8 @@
        "      <td>584.659729</td>\n",
        "      <td>788.070068</td>\n",
        "      <td>756.565369</td>\n",
+       "      <td>960</td>\n",
+       "      <td>853</td>\n",
        "      <td>CD4(+)MHCII(+)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -365,8 +368,6 @@
        "      <td>769.504578</td>\n",
        "      <td>630.214294</td>\n",
        "      <td>...</td>\n",
-       "      <td>10204.564453</td>\n",
-       "      <td>2450.941162</td>\n",
        "      <td>849.758118</td>\n",
        "      <td>958.845459</td>\n",
        "      <td>148.190170</td>\n",
@@ -374,6 +375,8 @@
        "      <td>967.803772</td>\n",
        "      <td>760.188660</td>\n",
        "      <td>146.096573</td>\n",
+       "      <td>97</td>\n",
+       "      <td>517</td>\n",
        "      <td>CD4(+)MHCII(+)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -389,8 +392,6 @@
        "      <td>-20.499031</td>\n",
        "      <td>2619.047852</td>\n",
        "      <td>...</td>\n",
-       "      <td>4526.831543</td>\n",
-       "      <td>171.375153</td>\n",
        "      <td>442.771057</td>\n",
        "      <td>-48.994541</td>\n",
        "      <td>396.196289</td>\n",
@@ -398,6 +399,8 @@
        "      <td>-164.626266</td>\n",
        "      <td>31.346064</td>\n",
        "      <td>617.386902</td>\n",
+       "      <td>975</td>\n",
+       "      <td>149</td>\n",
        "      <td>CD4(+)MHCII(+)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -413,8 +416,6 @@
        "      <td>1332.292480</td>\n",
        "      <td>1076.271362</td>\n",
        "      <td>...</td>\n",
-       "      <td>5256.714844</td>\n",
-       "      <td>1192.392822</td>\n",
        "      <td>642.832092</td>\n",
        "      <td>1129.472900</td>\n",
        "      <td>144.636276</td>\n",
@@ -422,11 +423,13 @@
        "      <td>1665.058594</td>\n",
        "      <td>328.518311</td>\n",
        "      <td>133.358414</td>\n",
+       "      <td>98</td>\n",
+       "      <td>871</td>\n",
        "      <td>CD4(+)MHCII(+)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>734101 rows × 31 columns</p>\n",
+       "<p>734101 rows × 33 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -456,36 +459,36 @@
        "734099  -287.188904  -357.778961  -386.898590   -20.499031  2619.047852  ...   \n",
        "734100   548.872070  1863.510986   511.723022  1332.292480  1076.271362  ...   \n",
        "\n",
-       "                 CD4          IgM         B220        ERTR7        CD35  \\\n",
-       "0         384.983276   262.247803   457.675629   840.192688  120.959267   \n",
-       "1         247.624054    -2.559227  1217.684692   682.790100   53.276588   \n",
-       "2        2539.244141  1074.491821   666.266418   753.930969  601.395996   \n",
-       "3        1587.342529   223.759796  2261.370361   249.342300  244.572174   \n",
-       "4         215.759155   227.193817  1058.446533  -267.946808  211.492844   \n",
-       "...              ...          ...          ...          ...         ...   \n",
-       "734096   2984.932373    66.964172  -358.940735   172.902756  194.764572   \n",
-       "734097  15249.159180  2446.896973  3346.783691  2857.673828  869.343933   \n",
-       "734098  10204.564453  2450.941162   849.758118   958.845459  148.190170   \n",
-       "734099   4526.831543   171.375153   442.771057   -48.994541  396.196289   \n",
-       "734100   5256.714844  1192.392822   642.832092  1129.472900  144.636276   \n",
+       "               B220        ERTR7        CD35      CD2135         CD44  \\\n",
+       "0        457.675629   840.192688  120.959267   -1.224402   422.408691   \n",
+       "1       1217.684692   682.790100   53.276588   20.090719   448.701660   \n",
+       "2        666.266418   753.930969  601.395996  161.183090  2229.804443   \n",
+       "3       2261.370361   249.342300  244.572174  135.403366   665.720459   \n",
+       "4       1058.446533  -267.946808  211.492844  -41.061123  2065.742676   \n",
+       "...             ...          ...         ...         ...          ...   \n",
+       "734096  -358.940735   172.902756  194.764572   56.864479  -164.587204   \n",
+       "734097  3346.783691  2857.673828  869.343933  304.062866   584.659729   \n",
+       "734098   849.758118   958.845459  148.190170  138.270584   967.803772   \n",
+       "734099   442.771057   -48.994541  396.196289  163.886475  -164.626266   \n",
+       "734100   642.832092  1129.472900  144.636276  152.919556  1665.058594   \n",
        "\n",
-       "            CD2135         CD44       NKp46        MHCII         cell_type  \n",
-       "0        -1.224402   422.408691  515.130066  6712.812988  CD11c(+) B cells  \n",
-       "1        20.090719   448.701660  171.880310  2024.678711  CD11c(+) B cells  \n",
-       "2       161.183090  2229.804443  512.220764  8647.193359  CD11c(+) B cells  \n",
-       "3       135.403366   665.720459  351.108246  4838.463379  CD11c(+) B cells  \n",
-       "4       -41.061123  2065.742676  259.003235  5092.891602  CD11c(+) B cells  \n",
-       "...            ...          ...         ...          ...               ...  \n",
-       "734096   56.864479  -164.587204   -9.616314   958.904358    CD4(+)MHCII(+)  \n",
-       "734097  304.062866   584.659729  788.070068   756.565369    CD4(+)MHCII(+)  \n",
-       "734098  138.270584   967.803772  760.188660   146.096573    CD4(+)MHCII(+)  \n",
-       "734099  163.886475  -164.626266   31.346064   617.386902    CD4(+)MHCII(+)  \n",
-       "734100  152.919556  1665.058594  328.518311   133.358414    CD4(+)MHCII(+)  \n",
+       "             NKp46        MHCII     x    y         cell_type  \n",
+       "0       515.130066  6712.812988    10   70  CD11c(+) B cells  \n",
+       "1       171.880310  2024.678711  1000  294  CD11c(+) B cells  \n",
+       "2       512.220764  8647.193359  1003  107  CD11c(+) B cells  \n",
+       "3       351.108246  4838.463379  1003  113  CD11c(+) B cells  \n",
+       "4       259.003235  5092.891602  1003  148  CD11c(+) B cells  \n",
+       "...            ...          ...   ...  ...               ...  \n",
+       "734096   -9.616314   958.904358   955  482    CD4(+)MHCII(+)  \n",
+       "734097  788.070068   756.565369   960  853    CD4(+)MHCII(+)  \n",
+       "734098  760.188660   146.096573    97  517    CD4(+)MHCII(+)  \n",
+       "734099   31.346064   617.386902   975  149    CD4(+)MHCII(+)  \n",
+       "734100  328.518311   133.358414    98  871    CD4(+)MHCII(+)  \n",
        "\n",
-       "[734101 rows x 31 columns]"
+       "[734101 rows x 33 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
